# borgclaw

./: .env.example  .gitignore  ABOUT.md  AGENTS.md  BUILD_AND_SECRETS_PLAN.md  CHANGELOG.md  CLAUDE.md  CUT_CONTENT.MD  Cargo.toml  DECISION_LOG.md  DEPLOY.md  HANDOFF.md  LICENSE  LLM_ENDPOINT_TEST_REPORT.md  PROVIDER_UNIFORMITY_AUDIT.md  README.md  ROADMAP.md  VERSION_AUDIT_AND_RECOMMENDATIONS.md
.agents/skills/code-quality/: SKILL.md
.agents/skills/deployment-onboarding/: SKILL.md
.agents/skills/git-workflow/: SKILL.md
.agents/skills/inspiration-study/: SKILL.md
.github/: copilot.instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rules/: README.md
.github/skills/: README.md
.github/skills/code-quality-check/: SKILL.md
.github/skills/decision-logging/: SKILL.md
.github/skills/emergency-procedures/: SKILL.md
.github/skills/git-fork-setup/: SKILL.md
.github/skills/project-instructions-setup/: SKILL.md
.github/skills/pull-request-creation/: SKILL.md
.github/skills/security-review/: SKILL.md
.github/tickets/: README.md  TICKET-050.md  TICKET-051.md  example-ticket.instructions.md  ticket-template.instructions.md
.github/workflows/: nightly.yml  release.yml
.opencode/skills/code-quality/: SKILL.md
.opencode/skills/git-workflow/: SKILL.md
borgclaw-cli/: Cargo.toml
borgclaw-cli/resources/: default_soul.md
borgclaw-cli/src/: main.rs
borgclaw-cli/src/onboarding/: colors.rs  mod.rs  providers.rs
borgclaw-core/: Cargo.toml
borgclaw-core/src/: constants.rs  fallback.rs  lib.rs
borgclaw-core/src/agent/: identity.rs  mod.rs  provider.rs  session.rs  subagent.rs  tools.rs
borgclaw-core/src/agent/tools/: browser.rs  file.rs  github.rs  google.rs  mcp.rs  media.rs  memory.rs  mod.rs  plugin.rs  schedule.rs  shell.rs  types.rs  web.rs
borgclaw-core/src/channel/: cli.rs  mod.rs  signal.rs  telegram.rs  traits.rs  webhook.rs
borgclaw-core/src/config/: mod.rs
borgclaw-core/src/mcp/: client.rs  mod.rs  transport.rs  types.rs
borgclaw-core/src/memory/: external.rs  heartbeat.rs  in_memory.rs  mod.rs  postgres.rs  session.rs  solution.rs  storage.rs
borgclaw-core/src/scheduler/: jobs.rs  mod.rs
borgclaw-core/src/security/: audit.rs  mod.rs  pairing.rs  processes.rs  secrets.rs  vault.rs  wasm.rs
borgclaw-core/src/skills/: browser.rs  github.rs  google.rs  image.rs  mod.rs  parser.rs  plugin.rs  qr.rs  stt.rs  tts.rs  url_shortener.rs
borgclaw-gateway/: Cargo.toml
borgclaw-gateway/src/: main.rs
docker/: sandbox-base.Dockerfile  sandbox-remote.Dockerfile
docs/: FINAL_SHIPPABILITY_AUDIT_2026-03-30.md  IMPLEMENTATION_AUDIT_2026-03-29.md  IMPLEMENTATION_PLAN_2026-03-30.md  IMPLEMENTATION_PLAN_2026-03-30_REMAINING_BACKLOG.md  REMAINING_TASKS.md  TOOL_SPLIT_EXECUTION_PLAN.md  TOOL_SPLIT_REMAINING_TODOS.md  channels.md  gateway.md  implementation-status.md  inspirations.md  integrations.md  memory.md  onboarding.md  quickstart.md  security.md  skills.md
scripts/: bootstrap.ps1  bootstrap.sh  clean-build-cache.ps1  clean-build-cache.sh  doctor.ps1  doctor.sh  gateway.ps1  gateway.sh  install-bitwarden.sh  install-docker-sandbox.ps1  install-docker-sandbox.sh  install-github.sh  install-google-oauth.sh  install-ollama.ps1  install-ollama.sh  install-pgvector.ps1  install-pgvector.sh  install-playwright.ps1  install-playwright.sh  install-whisper.ps1  install-whisper.sh  install.sh  migrate-env-to-secrets.sh  onboarding.ps1  onboarding.sh  repl.ps1  repl.sh  setup-provider-key.sh  test_llm_endpoints.sh  uninstall.sh  with-build-env.ps1  with-build-env.sh
scripts/lib/: build-env.ps1  build-env.sh  config.sh  validation.sh
scripts/playwright/: playwright-bridge.js
skills/: deployment-onboarding.md  git-workflow.md  inspiration-study.md
