[workspace]
members = [
    "borgclaw-core",
    "borgclaw-cli",
    "borgclaw-gateway",
]
resolver = "2"

[workspace.package]
version = "0.14.0"
edition = "2021"
authors = ["BorgClaw Team <borgclaw@example.com>"]
license = "MIT"
description = "A multi-valent AI agent framework - one mind, many capabilities"
homepage = "https://github.com/lealvona/borgclaw"
repository = "https://github.com/lealvona/borgclaw"
keywords = ["ai", "agent", "llm", "automation", "chatbot", "telegram", "rust"]
categories = ["command-line-utilities", "web-programming", "development-tools"]
rust-version = "1.75"

[workspace.dependencies]
borgclaw-core = { path = "borgclaw-core" }
borgclaw-cli = { path = "borgclaw-cli" }
borgclaw-gateway = { path = "borgclaw-gateway" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
regex = "1"
cron = "0.15"
teloxide = { version = "0.13", features = ["full"] }
signal-cli = "0.6"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[patch.crates-io]
sqlx-postgres = { path = "third_party/sqlx-postgres-0.7.4" }
