[package]
name = "borgclaw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
regex.workspace = true
cron.workspace = true
teloxide = { version = "0.13", features = ["full"] }
log = "0.4"

[features]
default = []
sqlite = ["sqlx/default"]
