[package]
name = "borgclaw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
regex.workspace = true
cron.workspace = true
teloxide = { version = "0.13", features = ["full"] }
log = "0.4"
reqwest = { workspace = true, features = ["multipart", "json", "stream"] }
base64.workspace = true
qrcode.workspace = true
image.workspace = true
urlencoding = "2.1"
bytes = "1.5"
futures-core = "0.3"
futures-util = "0.3"
wasmtime = "20.0"

[features]
default = []
sqlite = ["sqlx/default"]
