[package]
name = "borgclaw-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for BorgClaw - the hypercube agent collective"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx.workspace = true
regex.workspace = true
cron.workspace = true
teloxide = { version = "0.13", features = ["full"] }
log = "0.4"
reqwest = { workspace = true, features = ["multipart", "json", "stream"] }
base64.workspace = true
qrcode.workspace = true
image.workspace = true
urlencoding = "2.1"
url = "2.5"
bytes = "1.5"
chacha20poly1305 = "0.10"
futures-core = "0.3"
futures-util = "0.3"
rand = "0.8"
wasmtime = "20.0"
tokio-tungstenite.workspace = true
semver = "1.0"
portable-pty = "0.9"

[features]
default = []
sqlite = ["sqlx/default"]

[dev-dependencies]
wat = "1"
