[package]
name = "borgclaw-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebSocket gateway for BorgClaw - real-time collective interface"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "borgclaw-gateway"
path = "src/main.rs"

[dependencies]
borgclaw-core.workspace = true
tokio.workspace = true
axum.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1"
hyper-util = { version = "0.1", features = ["service", "tokio"] }
